syntax = "proto3";

option go_package="./;main";

message User {
    string name = 1;
    int64 favorite_number = 2;
    string favorite_color = 3;
}